--- a/css/index.css
+++ b/css/index.css
@@ -592,14 +592,17 @@ body {
 .bestseller__wrapper,
 .reviews__wrapper,
 .news__wrapper,
-.categories__wrapper {
+.categories__wrapper,
+.weeklyoffers__wrapper,
+.actions__wrapper {
 }
 .trends__column,
 .reservations__column,
 .bestseller__column,
 .reviews__column,
 .news__column,
-.categories__column {
+.categories__column,
+.weeklyoffers__column {
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -636,7 +639,8 @@ body {
 .reviews__h2,
 .indie__h2,
 .news__h2,
-.categories__h2 {
+.categories__h2,
+.weeklyoffers__h2 {
   font-size: 2rem;
   font-weight: 500;
 }
@@ -1353,6 +1357,12 @@ body {
   border-radius: 8px;
 }
 
+.weeklyoffers__section {
+  width: 100%;
+  min-height: 50svh;
+  padding: 3.75rem 0;
+}
+
 .listingweek__timer {
   width: 100%;
   height: 4rem;
@@ -1381,4 +1391,39 @@ body {
   height: 1rem;
   padding-top: 0.25rem;
   fill: var(--color-medium-light);
+}
+
+.actions__section {
+  width: 100%;
+  min-height: 25vh;
+  padding: 2rem 0;
+  background-color: var(--color-medium-dark);
+}
+.actions__column {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+.actions__img {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+.actions__h5 {
+  font-size: 23px;
+  font-weight: 500;
+}
+.actions__span {
+  font-size: 15px;
+  color: var(--color-light);
+}
+.actions__link {
+  width: fit-content;
+  font-size: 17px;
+  font-weight: 500;
+  padding: 1rem 1.5rem;
+  background: var(--fire-gradient);
+  border-radius: 8px;
 }
