--- a/css/index.css
+++ b/css/index.css
@@ -182,27 +182,40 @@ body {
 
 .header {
   width: 100%;
+  height: 100px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), transparent);
-  padding-top: 1rem;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
 
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+
   z-index: 2;
 
-  transition: all 0.2s ease;
+  transition: background 0.2s ease;
 }
 .header.is--blurred {
+  -webkit-backdrop-filter: blur(60px) saturate(100%);
   backdrop-filter: blur(60px) saturate(100%);
   background: rgba(0, 0, 0, 0.75);
 }
 .header__div {
   width: 100%;
+  padding: 1rem 0;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: flex-start;
+
+  transition: all 0.3s ease;
+}
+.header__div.is--hidden {
+  align-items: center;
+  padding: 0.5rem 0;
 }
 .header__h1 {
   z-index: 2;
@@ -223,6 +236,15 @@ body {
   align-items: center;
 
   gap: 0.5rem;
+
+  position: absolute;
+  top: 50%;
+  right: 50%;
+
+  transform: translate(50%, -25%);
+}
+.menu.is--deactivated {
+  transform: translate(50%, -50%);
 }
 .menu__li {
   color: #ffffffcc;
@@ -293,6 +315,8 @@ body {
 
   padding: 0.5rem;
   border-radius: 4rem;
+
+  position: relative;
 }
 .navmenu__a {
   display: flex;
@@ -431,17 +455,24 @@ body {
 .navmenu__svg.is--hidden {
   fill: var(--color-light);
 }
+.navmenu__svg.is--deactivated {
+  display: none;
+}
 .navmenu__ul {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
   align-items: center;
+  -webkit-backdrop-filter: blur(60px) saturate(100%);
   backdrop-filter: blur(60px) saturate(100%);
   padding: 0.5rem 5rem 0.5rem 1rem;
   border-radius: 4rem;
   position: relative;
 
-  z-index: 2;
+  z-index: 1;
+}
+.navmenu__ul.is--hidden {
+  backdrop-filter: none;
 }
 .submenu {
   display: none;
@@ -453,11 +484,18 @@ body {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  -webkit-backdrop-filter: blur(60px) saturate(100%);
   backdrop-filter: blur(60px) saturate(100%);
   padding: 1.5rem;
   border-radius: 0.75rem;
   box-shadow: 0 0 0 125rem rgba(16, 16, 16, 0.6);
-  z-index: 1;
+
+  position: absolute;
+  top: 0%;
+  left: 0%;
+
+  transform: translate(0, 6rem);
+
 }
 .submenu__category {
   display: none;
