--- a/css/index.css
+++ b/css/index.css
@@ -199,6 +199,7 @@ body {
   transition: background 0.2s ease;
 }
 .header.is--blurred {
+  height: 80px;
   -webkit-backdrop-filter: blur(60px) saturate(100%);
   backdrop-filter: blur(60px) saturate(100%);
   background: rgba(0, 0, 0, 0.75);
