--- a/css/index.css
+++ b/css/index.css
@@ -647,7 +647,7 @@ body {
 .news__section,
 .categories__section {
   width: 100%;
-  min-height: 75svh;
+  min-height: fit-content;
   padding: 3.75rem 0;
 }
 
@@ -728,6 +728,8 @@ body {
   grid-gap: 1rem;
 
   padding: 40px 0;
+
+  z-index: 1;
 }
 .listingnews {
   width: 100%;
@@ -1009,6 +1011,8 @@ body {
   align-items: center;
 
   padding: 1.25rem 0;
+
+  gap: 1rem;
 }
 .trust__li {
   display: flex;
@@ -1024,8 +1028,10 @@ body {
   background-color: var(--color-medium-dark);
 }
 .trust__svg {
-  width: 2rem;
-  height: 2rem;
+  min-width: 2rem;
+  min-height: 2rem;
+  max-width: 2rem;
+  max-height: 2rem;
   fill: var(--main-color);
 }
 .trust__texts {
@@ -1035,6 +1041,8 @@ body {
   align-items: flex-start;
 
   gap: 0.25rem;
+
+  white-space: nowrap;
 }
 .trust__maintext {
   font-size: 23px;
@@ -1054,10 +1062,12 @@ body {
   gap: 0.5rem;
 }
 .trust__title {
+  min-width: 8rem;
   width: 8rem;
   height: auto;
 }
 .trust__stars {
+  min-width: 13rem;
   width: 13rem;
   height: auto;
 }
@@ -1182,7 +1192,6 @@ body {
 .comments__link {
   width: 15rem;
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 .comments__column {
@@ -1228,8 +1237,8 @@ body {
 
 .indie__background {
   width: 100%;
-  min-height: 46.875rem;
-
+  /* min-height: 46.875rem; */
+  min-height: auto;
   padding-top: 60px;
 
   background-image: linear-gradient(80deg, rgba(50, 50, 50, 0.4), #323232 35%), url(/assets/img/deadcells.png);
@@ -1578,6 +1587,8 @@ body {
   gap: 1rem;
 }
 .rrss__icon {
+  max-width: 3rem;
+  max-width: auto;
 }
 .rrss__apps {
   display: flex;
@@ -1614,4 +1625,115 @@ body {
 .footer__span {
   font-size: 15px;
   color: var(--color-white);
+}
+
+/* media queries */
+
+@media (max-width: 1440px) {
+  .narrow__wrapper {
+    width: 85%;
+  }
+  .comments__ul {
+    overflow: scroll;
+  }
+  .listing {
+    gap: 2rem;
+  }
+  .indie__character {
+    left: 5%;
+  }
+  .indie__column {
+    width: 60%;
+    margin-right: 5%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .cards {
+    gap: 1.25rem;
+  }
+  .cards__li {
+    width: calc(50% - 30px);
+  }
+  .listingindie {
+    gap: 2rem;
+  }
+  .indie__character {
+    left: 5%;
+    width: 75%;
+    min-height: 450px;
+  }
+  .indie__column {
+    width: 60%;
+    margin-right: 5%;
+  }
+  .catgrid {
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+    gap: 4rem 2rem;
+  }
+  .catgrid__name {
+    top: calc(100% - (200px / 2));
+  }
+  .catgrid__a {
+    width: auto;
+    height: auto;
+  }
+  .narrow__wrapper {
+    width: 95%;
+  }
+  .listingweek {
+    overflow: scroll;
+  }
+  .trust__contain {
+    overflow: scroll;
+  }
+  .trust {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .listing {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .cards {
+    width: 100%;
+    overflow: scroll;
+  }
+  .cards__article {
+    width: 20rem;
+  }
+
+  .indie__character {
+    width: 50%;
+    min-height: 300px;
+    top: 25%;
+  }
+  .footer__wrapper {
+    flex-flow: column nowrap;
+    gap: 1rem;
+  }
+  .trust__link {
+    align-items: center;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid var(--color-medium-dark);
+  }
+  .terms__ul,
+  .rrss,
+  .rrss__div,
+  .rrss__apps {
+    align-items: center;
+  }
+  .rrss__apps {
+    justify-content: center;
+  }
+  .rrss__div {
+    justify-content: center;
+  }
+  .rrss {
+    gap: 2rem;
+  }
+  .rrss__a {
+    width: 10rem;
+    height: auto;
+  }
 }
