--- a/css/index.css
+++ b/css/index.css
@@ -227,6 +227,9 @@ body {
 .header__div.is--hidden {
   align-items: center;
 }
+.header__div {
+  align-items: center;
+}
 .header__h1 {
   z-index: 2;
 }
@@ -552,15 +555,15 @@ body {
   align-items: center;
   gap: 0.25rem;
 }
-
-.submenu__link {
+.submenu__link,
+.grid__name,
+.flex__name {
+  font-size: 16px;
 }
 .submenu__arrow {
   width: 1.25rem;
   height: 1.25rem;
   fill: var(--color-white);
-}
-.submenu__grid {
 }
 .grid {
   width: 100%;
@@ -715,7 +718,7 @@ body {
 .news__h2,
 .categories__h2,
 .weeklyoffers__h2 {
-  font-size: 2rem;
+  font-size: 32px;
   font-weight: 500;
 }
 .trends__container,
@@ -1191,22 +1194,26 @@ body {
   border-radius: 50%;
 }
 .comments__info {
-  width: 100%;
+  width: 15rem;
+  height: auto;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: flex-start;
 
   gap: 0.5rem;
+
+  overflow: hidden;
 }
 .comments__stars {
   width: 80px;
   height: 12px;
 }
 .comments__link {
-  width: 15rem;
+  width: 12rem;
   white-space: nowrap;
   text-overflow: ellipsis;
+  overflow: hidden;
 }
 .comments__column {
   width: 100%;
@@ -1456,7 +1463,6 @@ body {
 
 .weeklyoffers__section {
   width: 100%;
-  min-height: 50svh;
   padding: 3.75rem 0;
   overflow: hidden;
 }
@@ -1723,6 +1729,16 @@ body {
   .navmenu__flex {
     gap: 0;
   }
+  .trends__section,
+  .reservations__section,
+  .bestseller__section,
+  .reviews__section,
+  .indie__section,
+  .news__section,
+  .categories__section,
+  .weeklyoffers__section {
+    padding: 1.5rem 0;
+  }
   .cards {
     gap: 1.25rem;
   }
@@ -1757,6 +1773,13 @@ body {
   }
 }
 @media screen and (max-width: 768px) {
+  .header__a {
+    width: 95px;
+    height: 24px;
+  }
+  .navmenu__input::placeholder {
+    font-size: 0.8125rem;
+  }
   .listing {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -1815,6 +1838,7 @@ body {
   .rrss__div,
   .rrss__apps {
     align-items: center;
+    text-align: center;
   }
   .terms,
   .trust {
@@ -1862,6 +1886,15 @@ body {
   .weeklyoffers__h2 {
     font-size: 24px;
   }
+  .trends__svg,
+  .reservations__svg,
+  .bestseller__svg,
+  .reviews__svg,
+  .indie__svg,
+  .news__svg {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
   .listing {
     display: flex;
     flex-flow: row nowrap;
@@ -1876,9 +1909,18 @@ body {
   .listingweek__li {
     min-width: 75%;
   }
+  .trends__column,
+  .reservations__column,
+  .bestseller__column,
+  .reviews__column,
+  .news__column,
+  .categories__column,
+  .weeklyoffers__column {
+    gap: 1rem;
+  }
   .cards {
     justify-content: flex-start;
-    padding: 40px 10px;
+    padding: 20px 10px;
   }
   .cards__article {
     width: 15rem;
@@ -1893,6 +1935,7 @@ body {
   }
   .indie__background {
     background-image: none;
+    padding: 1rem 0;
   }
   .catgrid {
     display: flex;
@@ -1914,6 +1957,8 @@ body {
     gap: 2rem;
     overflow: scroll;
     scrollbar-width: none;
+
+    padding: 1rem 0;
   }
   .indie__column {
     width: 95%;
@@ -1922,5 +1967,49 @@ body {
   }
   .listingweek__article {
     width: 100%;
+  }
+  .submenu__link,
+  .grid__name,
+  .flex__name {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .navmenu__advanced.is--active {
+    display: none;
+  }
+  .navmenu__search.is--active {
+    width: 90%;
+  }
+  .navmenu__ul {
+    padding: 0.5rem 3rem 0.5rem 1rem;
+  }
+  .rrss__apps {
+    gap: 1rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .navmenu__ul {
+    width: 100%;
+    padding: 0.5rem 0 0.5rem 0;
+    align-items: flex-start;
+  }
+  .navmenu__search {
+    right: 0%;
+  }
+  .navmenu__a {
+    gap: 4px;
+  }
+  .navmenu__search.is--active {
+    width: 90%;
+    margin-right: 2rem;
+  }
+  .navmenu__close.is--active {
+    right: -3%;
+  }
+  .rrss__a {
+    width: 8rem;
+    height: auto;
   }
 }
