--- a/css/index.css
+++ b/css/index.css
@@ -745,7 +745,7 @@ body {
 .news__container {
 }
 .listing {
-  /* width: 100%; */
+  width: fit-content;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
@@ -771,9 +771,10 @@ body {
   gap: 1.875rem;
 }
 .listingweek {
+  width: 100%;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   gap: 1.875rem;
 }
@@ -782,9 +783,6 @@ body {
 .listingweek__li {
   padding-bottom: 1rem;
   transition: all 0.3s ease;
-}
-.listingweek__li {
-  width: 30%;
 }
 .listing__li:hover,
 .listingindie__li:hover,
@@ -1250,7 +1248,7 @@ body {
 .offer {
   position: absolute;
   bottom: 40%;
-  left: 18%;
+  left: calc(50% - (1200px / 2));
 }
 .offer__title {
   font-size: 2.5rem;
@@ -1822,11 +1820,9 @@ body {
     font-size: 13px;
     line-height: 18px;
   }
-  .news__p {
-    display: none;
-  }
+
   .news__div {
-    gap: 0.5rem;
+    gap: 0.25rem;
   }
   .footer__wrapper {
     flex-flow: column nowrap;
@@ -1869,14 +1865,15 @@ body {
     height: auto;
   }
   .news__img {
-    min-width: 40%;
+    min-width: 30%;
+  }
+  .news__p {
+    font-size: 13px;
   }
   .listingweek {
+    justify-content: flex-start;
     overflow: scroll;
     scrollbar-width: none;
-  }
-  .listingweek__li {
-    width: 100%;
   }
 }
 @media screen and (max-width: 625px) {
@@ -1884,6 +1881,9 @@ body {
     flex: 0 0 225px;
     height: 250px;
     margin-right: -10%;
+  }
+  .news__img {
+    min-width: 40%;
   }
 }
 @media screen and (max-width: 500px) {
@@ -1907,6 +1907,7 @@ body {
     height: 1.25rem;
   }
   .listing {
+    width: 100%;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
@@ -1959,6 +1960,9 @@ body {
   }
   .catgrid__icon {
     height: 90%;
+  }
+  .news__p {
+    display: none;
   }
   .listingindie {
     display: flex;
