--- a/css/index.css
+++ b/css/index.css
@@ -110,17 +110,6 @@ q:after {
 }
 /* Fin */
 
-/* Configuramos el texto que seleccionamos */
-::-moz-selection {
-  /* background-color: var(--Orange);
-  color: var(--White); */
-}
-::selection {
-  /* background-color: var(--Orange);
-  color: var(--White); */
-}
-/* Fin */
-
 /* Nivelamos problemas de tipografías y colocación de formularios */
 form,
 input,
@@ -344,10 +333,8 @@ body {
 
 .navmenu__li {
 }
-.navmenu__li:hover {
-  .navmenu__svg--arrow {
-    opacity: 1;
-  }
+.navmenu__li:hover .navmenu__svg--arrow {
+  opacity: 1;
 }
 .navmenu__flex {
   display: flex;
@@ -379,10 +366,8 @@ body {
 
   z-index: 1;
 }
-.navmenu__search:hover {
-  .navmenu__svg--magnify {
-    transform: scale(1.2);
-  }
+.navmenu__search:hover .navmenu__svg--magnify {
+  transform: scale(1.2);
 }
 .navmenu__search.is--active {
   width: 100%;
@@ -462,10 +447,8 @@ body {
   padding: 0.5rem;
   z-index: 1;
 }
-.navmenu__close.is--active:hover {
-  .navmenu__svg--close {
-    fill: var(--main-color-hover);
-  }
+.navmenu__close.is--active:hover .navmenu__svg--close {
+  fill: var(--main-color-hover);
 }
 .navmenu__svg--magnify.is--hidden {
   display: none;
@@ -481,7 +464,7 @@ body {
 .navmenu__svg.is--deactivated {
   display: none;
 }
-.navmenu__ul {
+.navmenu__div {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
@@ -494,7 +477,7 @@ body {
 
   z-index: 2;
 }
-.navmenu__ul.is--hidden {
+.navmenu__div.is--hidden {
   backdrop-filter: none;
 }
 .submenu {
@@ -754,7 +737,7 @@ body {
   display: grid;
 
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1rem;
+  grid-gap: 1rem 3rem;
 
   padding: 40px 0 0 0;
 
@@ -784,24 +767,28 @@ body {
   padding-bottom: 1rem;
   transition: all 0.3s ease;
 }
-.listing__li:hover,
-.listingindie__li:hover,
-.listingweek__li:hover {
-  .listing__link,
-  .listingindie__link,
-  .listingweek__link {
-    transform: scale(1.1);
-  }
-  .listing__img,
-  .listingindie__img,
-  .listingweek__img {
-    opacity: 0;
-  }
-  .listing__video,
-  .listingindie__video,
-  .listingweek__video {
-    opacity: 1;
-  }
+.listing__link:hover,
+.listingindie__link:hover,
+.listingweek__link:hover {
+  transform: scale(1.05);
+}
+.listing__link:hover .listing__img {
+  opacity: 0;
+}
+.listingindie__link:hover .listingindie__img {
+  opacity: 0;
+}
+.listingweek__link:hover .listingweek__img {
+  opacity: 0;
+}
+.listing__link:hover .listing__video {
+  opacity: 1;
+}
+.listingindie__link:hover .listingindie__video {
+  opacity: 1;
+}
+.listingweek__link:hover .listingweek__video {
+  opacity: 1;
 }
 
 .listing__article,
@@ -826,6 +813,8 @@ body {
   transition: all 0.3s ease;
 
   opacity: 1;
+
+  pointer-events: none;
 }
 .listingweek__img {
   border-top-left-radius: 10px;
@@ -833,6 +822,8 @@ body {
   transition: all 0.3s ease;
 
   opacity: 1;
+
+  pointer-events: none;
 }
 .listing__video,
 .listingindie__video {
@@ -848,6 +839,8 @@ body {
   transition: all 0.3s ease;
 
   opacity: 0;
+
+  pointer-events: none;
 }
 .listingweek__video {
   border-top-left-radius: 10px;
@@ -863,6 +856,8 @@ body {
   transition: all 0.3s ease;
 
   opacity: 0;
+
+  pointer-events: none;
 }
 .listing__discount,
 .offer__discount,
@@ -949,15 +944,15 @@ body {
 .cards__li {
   width: calc(25% - 30px);
 }
-.cards__li:hover {
-  .cards__img {
-    opacity: 0;
-  }
-  .cards__video {
-    opacity: 1;
-  }
+.cards__link:hover .cards__img {
+  opacity: 0;
 }
-.cards__article {
+
+.cards__link:hover .cards__video {
+  opacity: 1;
+}
+
+.cards__div {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -1103,7 +1098,7 @@ body {
   font-size: 14px;
 }
 
-.partner__section {
+.partner__div {
   width: 100%;
   margin: 3rem 0 2rem 0;
   background-color: var(--color-medium-dark);
@@ -1381,11 +1376,10 @@ body {
   min-width: 75%;
   z-index: 1;
 }
-.catgrid__cat:hover {
-  .catgrid__icon {
-    height: 115%;
-  }
+.catgrid__cat:hover .catgrid__icon {
+  height: 115%;
 }
+
 .catgrid__cat.is--hidden {
   display: none;
 }
@@ -1709,9 +1703,8 @@ body {
   .menu.is--hidden {
     display: none;
   }
-  .navmenu__ul {
+  .navmenu__div {
     backdrop-filter: none;
-
     flex-flow: column-reverse nowrap;
   }
   .navmenu__svg {
@@ -1731,6 +1724,9 @@ body {
 
     top: calc(50% - (26px / 2));
     right: 5%;
+  }
+  .navmenu__close.is--active {
+    top: 15%;
   }
   .navmenu__flex {
     gap: 0;
@@ -1793,7 +1789,7 @@ body {
     overflow: scroll;
     scrollbar-width: none;
   }
-  .cards__article {
+  .cards__div {
     width: 20rem;
   }
   .indie__background {
@@ -1951,10 +1947,10 @@ body {
     justify-content: flex-start;
     padding: 20px 10px;
   }
-  .cards__article {
+  .cards__div {
     width: 15rem;
   }
-  .partner__section,
+  .partner__div,
   .indie__character {
     display: none;
   }
@@ -2013,7 +2009,7 @@ body {
   .navmenu__search.is--active {
     width: 90%;
   }
-  .navmenu__ul {
+  .navmenu__div {
     padding: 0.5rem 3rem 0.5rem 1rem;
   }
   .rrss__apps {
@@ -2022,7 +2018,7 @@ body {
 }
 
 @media screen and (max-width: 320px) {
-  .navmenu__ul {
+  .navmenu__div {
     width: 100%;
     padding: 0.5rem 0 0.5rem 0;
     align-items: flex-start;
@@ -2038,6 +2034,7 @@ body {
     margin-right: 2rem;
   }
   .navmenu__close.is--active {
+    top: 15%;
     right: -3%;
   }
   .rrss__a {
